--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #0b3235;
     background-size: auto;
     background-repeat: repeat;
+    background-image: url();
 }
 
 
