--- a/css/style.css
+++ b/css/style.css
@@ -19,17 +19,12 @@ h1 {
     position: relative;
     color: #030b0c;
     text-shadow: 0px 0px 30px #2c888e;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #85d3d9;
     top: 50px;
     font-size: 70px;
     font-style: italic;
     margin: 0;
+    animation: animateText 2s infinite ease;
 }
-
-
-/* -------------- */
-/* Third Problem */
 
 .memorygameContainer {
     display: flex;
@@ -51,4 +46,20 @@ h1 {
 
 .memorygameContainer img {
     width: 20%;
+}
+
+@keyframes animateText {
+    0% {
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: #85d3d9;
+    }
+
+    50% {
+        -webkit-text-stroke-width: 0px;
+    }
+
+    100% {
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: #85d3d9;
+    }
 }
