--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,13 @@ body {
 h1 {
     position: relative;
     color: #030b0c;
-    text-shadow: 0px 0px 30px #2c888e;
+    text-shadow: 0px 0px 50px #ffffff;
     top: 50px;
     font-size: 70px;
     font-style: italic;
     margin: 0;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #85d3d9;
     animation: animateText 2s infinite ease;
 }
 
@@ -54,12 +56,21 @@ h1 {
         -webkit-text-stroke-color: #85d3d9;
     }
 
-    50% {
+    20% {
+        -webkit-text-stroke-width: 0px;
+    }
+
+    30% {
+        -webkit-text-stroke-width: 1px;
+        text-shadow: 0px 0px 50px #85d3d9;
+    }
+
+    40% {
         -webkit-text-stroke-width: 0px;
     }
 
     100% {
         -webkit-text-stroke-width: 1px;
-        -webkit-text-stroke-color: #85d3d9;
+        text-shadow: 0px 0px 50px #85d3d9;
     }
 }
